--- a/html/index.html
+++ b/html/index.html
@@ -11,16 +11,20 @@
 您的浏览器不支持 HTML5 canvas 标签。</canvas>
 <img id="imgCrane" src="crane.jpg" width="40" height="20" style="display:none;">
 <p>
-<table>
+<table border="0">
 <tr>
-<td>车高: </td><td><input id="inputCarHeight" type="text" style="width: 30px;" value="1.5"></input>米</td>
-<td>距离: </td><td><input id="inputDist" type="text"style="width: 30px;"  value="20"></input>米</td>
-<td>高度: </td><td><input id="inputHeight" type="text"style="width: 30px;"  value="10"></input>米</td>
+<td align="right" style="width: 40px;">E:</td><td><input id="inputE" type="text" style="width: 30px;" value="1.5"></input>米</td>
+<td align="right" style="width: 40px;">D:</td><td><input id="inputD" type="text" style="width: 30px;" value="2"></input>米</td>
+<td align="right" style="width: 40px;">B:</td><td><input id="inputB" type="text" style="width: 30px;"  value="10"></input>米</td>
 </tr>
 <tr>
-<td>臂长: </td><td><label id="armLength" style="color:blue; font-weight:bold;"></td>
-<td>夹角: </td><td><label id="angle" style="color:blue; font-weight:bold;"></td>
-<td /><td />
+<td align="right" style="width: 40px;">F:</td><td><input id="inputF" type="text" style="width: 30px;"  value="5"></input>米</td>
+<td align="right" style="width: 40px;">H:</td><td><input id="inputH" type="text" style="width: 30px;"  value="10"></input>米</td>
+</tr>
+<tr>
+<td align="right" style="width: 40px;">A:</td><td><label id="outputA" style="color:blue; font-weight:bold;"></td>
+<td align="right" style="width: 40px;">C:</td><td><label id="outputC" style="color:blue; font-weight:bold;"></td>
+<td align="right" style="width: 40px;">∠:</td><td><label id="angle" style="color:blue; font-weight:bold;"></td>
 </tr>
 <tr />
 <tr>
@@ -30,87 +34,97 @@
 </table>
 
 <script>
-var CANVAS_MAX_HEIGHT=300;   //画布大小
+var CANVAS_MAX_HEIGHT=340;   //画布大小
 var CANVAS_MARGIN=8;  //画布边距
 var TEXT_TO_LINE_DIST=10;  //文字离线的距离
 var canvas=document.getElementById("myCanvas");
 canvas.height=CANVAS_MAX_HEIGHT;
-canvas.width=CANVAS_MAX_HEIGHT+50;
+canvas.width=CANVAS_MAX_HEIGHT;
 var img=document.getElementById("imgCrane");
 var ctx=canvas.getContext("2d");
 img.onload = function()
 {
-    ctx.drawImage(img,0,CANVAS_MAX_HEIGHT-20,40,20);
+    ctx.drawImage(img,0,0,CANVAS_MAX_HEIGHT,CANVAS_MAX_HEIGHT);
+}
+
+var cookieE=getCookie("inputE");
+if(cookieE != ""){
+	document.getElementById("inputE").value=cookieE;
+}
+var cookieD=getCookie("inputD");
+if(cookieD != ""){
+	document.getElementById("inputD").value=cookieD;
 }
 
 function draw() {
 //获取对象
 var canvas=document.getElementById("myCanvas");
 var ctx=canvas.getContext("2d");
-var carHeight=document.getElementById("inputCarHeight");
-var distance=document.getElementById("inputDist");
-var height=document.getElementById("inputHeight");
+var inputE=document.getElementById("inputE");
+var inputD=document.getElementById("inputD");
+var inputB=document.getElementById("inputB");
+var inputF=document.getElementById("inputF");
+var inputH=document.getElementById("inputH");
 var img=document.getElementById("imgCrane");
 
+//设置Cookie
+document.cookie="inputE="+inputE.value+";inputD="+inputD.value;
+
 //清空
-document.getElementById("armLength").innerHTML ="";
+document.getElementById("outputA").innerHTML ="";
+document.getElementById("outputC").innerHTML ="";
+document.getElementById("angle").innerHTML ="";
 canvas.height=canvas.height;
+
+//下面小三角
+var a1=parseFloat(inputD.value)+parseFloat(inputB.value);
+var b1=parseFloat(inputH.value)-parseFloat(inputE.value);
+
+//上面小三角
+var a2=inputF.value;
+var b2=(a2*b1)/a1;
+
+console.log("a1="+a1+"; b1="+b1+"; a2="+a2+"; b2="+b2);
+
+var a=parseFloat(inputD.value)+parseFloat(inputB.value)+parseFloat(inputF.value);
+var b=b1+b2;
+var c=Math.sqrt(a*a+b*b);
+console.log("a="+a+"; b="+b+"; c="+c);
+var angle=Math.acos(a/c)*180/Math.PI;
+document.getElementById("outputA").innerHTML = c.toFixed(1) + " 米";
+document.getElementById("outputC").innerHTML = (parseFloat(b)+parseFloat(inputE.value)).toFixed(1) + " 米";
+document.getElementById("angle").innerHTML = angle.toFixed(1) + "°";
+
 //坐标
 var ax=CANVAS_MARGIN;
-var ay=CANVAS_MAX_HEIGHT-scale(carHeight.value)
-var bx=scale(distance.value);
+var ay=CANVAS_MAX_HEIGHT-scale(inputE.value)
+var bx=scale(inputD.value)+scale(inputB.value)+scale(inputF.value);
 var by=ay;
-var by1=by+scale(carHeight.value);
+var by1=by+scale(inputE.value);
 var cx=bx;
-var cy=CANVAS_MAX_HEIGHT-scale(height.value);
-var a=distance.value;
-var b=height.value-carHeight.value;
-var c=Math.sqrt(a*a+b*b);
-var angle=Math.acos(a/c)*180/Math.PI;
-document.getElementById("armLength").innerHTML = c.toFixed(2) + " 米";
-document.getElementById("angle").innerHTML = angle.toFixed(2) + "°";
+var cy=CANVAS_MAX_HEIGHT-scale(b+parseFloat(inputE.value));
 
 //画车
-var imgHeght = scale(carHeight.value)*1.5;
-ctx.drawImage(img,0,CANVAS_MAX_HEIGHT-imgHeght,2*imgHeght,imgHeght);
-
-//起始点
-ctx.beginPath();
-ctx.arc(ax,ay,CANVAS_MARGIN,0,Math.PI*2,true);
-ctx.closePath();
-ctx.fillStyle = 'green';
-ctx.fill();
-ctx.stroke();
-
-//画a、b边
-ctx.lineWidth=1;
-ctx.strokeStyle = "green";
-ctx.moveTo(ax,ay);
-ctx.lineTo(bx,by);
-ctx.moveTo(bx,by1);
-ctx.lineTo(cx,cy);
-ctx.stroke();
-
-//距离标注
-ctx.fillText(distance.value+"米", (bx-ax)/2, ay+TEXT_TO_LINE_DIST);
-//高度标注
-ctx.fillText(height.value+"米", (bx+TEXT_TO_LINE_DIST), cy+(by1-cy)/2+TEXT_TO_LINE_DIST);
-
-//画吊臂
-ctx.lineWidth=5;
-ctx.strokeStyle = "blue";
-ctx.beginPath();
-ctx.moveTo(cx,cy);
-ctx.lineTo(ax,ay);
-ctx.stroke();
-//吊臂标注
-ctx.fillText(c.toFixed(2)+"米", (cx-ax)/2-4*TEXT_TO_LINE_DIST, cy+(ay-cy)/2);
+var imgHeght = scale(inputE.value)*1.5;
+ctx.drawImage(img,0,0,CANVAS_MAX_HEIGHT,CANVAS_MAX_HEIGHT);
 
 }
 
-function showText(ctx,x1,y1,x2,y2,text) {
-	
-}
+function getCookie(cname) {
+    var name = cname + "=";
+    var decodedCookie = decodeURIComponent(document.cookie);
+    var ca = decodedCookie.split(';');
+    for(var i = 0; i <ca.length; i++) {
+        var c = ca[i];
+        while (c.charAt(0) == ' ') {
+            c = c.substring(1);
+         }
+         if (c.indexOf(name) == 0) {
+            return c.substring(name.length, c.length);
+         }
+     }
+    return "";
+} 
 
 function scale(x) {
 	return x*10;
